# bit-detection

./: LICENSE  README.md  main.py  pyproject.toml  test.txt
files/: file1.txt
files/test1/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
src/bit_detection/: bit_create.py  imagine_gen.py  main.py
src/bit_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tex/: main.tex  templete.tex
